--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
   </head>
   <body>
     <div class="container">
-      <h1>Tetris</h1>
-      <div class="board"></div>
+      <div class="main">
+        <h2>Tetris</h2>
+        <div class="board"></div>
+        <button class="btn">Start</button>
+      </div>
+      <div class="side">
+        <div class="info">
+          <div class="info-grid">
+            <h2>Next block</h2>
+            <div class="grid"></div>
+            <div class="score">
+              <h3 class="score-title">Points</h3>
+              <p class="score-amount">1000</p>
+            </div>
+            <div class="info-level">
+              <h3 class="info-title">level</h3>
+              <p class="level-amount">1</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <button class="btn">Start</button>
   </body>
 </html>
